Add styling to nav and side bars

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,300i,700%7COswald:300,500,700&amp;subset=latin-ext">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" >
-    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <link rel="stylesheet" href="vendor/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="vendor/Glyphter.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Admin Dashboard</title>
 </head>
@@ -16,7 +15,7 @@
 <body>
 
   <!-- navbar -->
-  <section class="navbar">
+  <section class="navbar navbar-lg">
     <div class="row">
       <div class="col-12">
         <ul>
@@ -60,7 +59,7 @@
         <div class="branding">
           <div class="logo"><a href="index.html"><img src="images/logo.png" alt="logo"></a></div>
           <a href="#">
-            <div id="hamburger" class="hamburger"></div>
+            <div class="hamburger" id="hamburger"></div>
           </a>
         </div>
         <ul class="menu">
@@ -117,7 +116,7 @@
         <div class="col-12 boss__photo">
           <a href="#">
             <span class="dot"></span>
-            <img src="images/avatar.png" alt="Wałęsa"/>
+            <img src="images/avatar.png" alt="boss"/>
             <span class="boss__name">Lech Wałęsa</span>
           </a>
         </div>
