Finished styling, add rwd options, removed modals

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <section class="navbar">
     <div class="row">
       <div class="col-12">
-        <ul>
+        <ul class="navbar__menu">
           <li class="navbar__item">
             <a href="#">
               <span class="navbar__item--icon icon-wallet"></span>
@@ -28,22 +28,19 @@
           </li>
           <li class="navbar__item">
             <a href="#">
-              <span class="icon-notification"></span>
+              <span class="navbar__item--icon icon-notification"></span>
               <span class="navbar__item--dot"></span>
             </a>
           </li>
           <li class="navbar__item">
-            <a href="#" class="modal-open" data-modal="#modal-login">
+            <a href="#" >
               <span class="navbar__item--icon icon-profile"></span>
               <span class="navbar__item--user">Leonardo Di Carpio</span>
             </a>
           </li>
           <li class="navbar__item">
             <a href="#">
-              <span
-                class="navbar__item--icon icon-quit modal-open"
-                data-modal="#modal-quit">
-              </span>
+              <span class="navbar__item--icon icon-quit"></span>
             </a>
           </li>
         </ul>
@@ -213,60 +210,48 @@
                         <td class="table__cell title">Google</td>
                         <td class="table__cell address"><a href="https://google.com">https://google.com</a></td>
                         <td class="table__cell icons">
-                          <div class="overlay">
                             <a href="#"><span class="icon-links"></span></a>
                             <a href="#"><span class="icon-trash"></span></a>
-                          </div>
                         </td>
                       </tr>
                       <tr class="table__row">
                         <td class="table__cell title">Kodilla</td>
                         <td class="table__cell address"><a href="s://kodilla.pl">https://kodilla.pl</a></td>
                         <td class="table__cell icons">
-                          <div class="overlay">
                             <a href="#"><span class="icon-links"></span></a>
                             <a href="#"><span class="icon-trash"></span></a>
-                          </div>
                         </td>
                       </tr>
                       <tr class="table__row">
                         <td class="table__cell title">Github</td>
                         <td class="table__cell address"><a href="https://github.com">https://github.com</a></td>
                         <td class="table__cell icons">
-                          <div class="overlay">
                             <a href="#"><span class="icon-links"></span></a>
                             <a href="#"><span class="icon-trash"></span></a>
-                          </div>
                         </td>
                       </tr>
                       <tr class="table__row">
                         <td class="table__cell title">Instagram</td>
                         <td class="table__cell address"><a href="http://instagram.com">https://instagram.com</a></td>
                         <td class="table__cell icons">
-                          <div class="overlay">
                             <a href="#"><span class="icon-links"></span></a>
                             <a href="#"><span class="icon-trash"></span></a>
-                          </div>
                         </td>
                       </tr>
                       <tr class="table__row">
                         <td class="table__cell title">Facebook</td>
                         <td class="table__cell address"><a href="https://Facebook.com">https://Facebook.com</a></td>
                         <td class="table__cell icons">
-                          <div class="overlay">
                             <a href="#"><span class="icon-links"></span></a>
                             <a href="#"><span class="icon-trash"></span></a>
-                          </div>
                         </td>
                       </tr>
                       <tr class="table__row">
                         <td class="table__cell title">Kodilla</td>
                         <td class="table__cell address"><a href="http://kodilla.pl">https://kodilla.pl</a></td>
                         <td class="table__cell icons">
-                          <div class="overlay">
                             <a href="#"><span class="icon-links"></span></a>
                             <a href="#"><span class="icon-trash"></span></a>
-                          </div>
                         </td>
                       </tr>
 
@@ -277,33 +262,14 @@
               </div>
             </div>
     
-            <div class="col-sm-12 center-content padding-content">
-              <button class="btn" id="modal-links-button">+ add new</button>
+            <div class="col-12 center-content padding-content">
+              <button class="btn">+ add new</button>
             </div>
     
       </div>
     </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   </div>
-
-
 
   <div class="overlay" id="overlay">
     <div class="modal" id="myModal">
@@ -315,14 +281,9 @@
       <button class="js--close-modal">Okay</button>
     </div>
   </div>
-  
 
-
-
-
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-<script src="js/script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+  <script src="js/script.js"></script>
 
 </body>
 </html>
